crates/dora-ir/src/tests/snapshots/xvm_ir__tests__wasm__load_i64.snap
---
source: crates/dora-ir/src/tests/wasm.rs
expression: "test_module(&context, i64_type, block).as_operation()"
---
module {
  func.func @test_func(%arg0: i64) {
    %0 = "wasm.load"(%arg0) : (i64) -> i64
  }
}
