crates/dora-ir/src/tests/snapshots/xvm_ir__tests__wasm__local_get_i32.snap
---
source: crates/dora-ir/src/tests/wasm.rs
expression: "test_module(&context, i32_type, block).as_operation()"
---
module {
  func.func @test_func(%arg0: i32) {
    %0 = "wasm.local_get"(%arg0) : (i32) -> i32
  }
}
